	  - Applying a spellbook allows the player to flip through the pages,
	      providing an indication of how many more times it can be read
	  - Blessed charging identifies how many charges an item has (from AceHack)
	  - When targeting a coordinate, you can press @ to move cursor to
	      yourself. (from NAO, idea from b_jonas)

	* bug fixes:
	  - Fixed crash when player gets killed when entering a new level and
	    a trap on the previous level causes a null pointer dereference
	    when writing the HTML map (related to C343-20).
	  - Really reduce occurrences of hint daemon to once per game
	  - Fixed crash with ray beams at edges of maps
	  - Fixed missing item name with traditional menustyle
	  - Disabled chromatic dragon generation by monster summoning
	  - Fixed sporadic crash with hitpointbar when hp was below 0
	  - Clear dungeon overview info for bones files (reported by Christian
	    Stegen)
	  - Fixed crash when destroying bag of holding containing gold pieces
	  - Fixed gold not merging in containers after container has been BUC
	    tested on altars
	  - Empty bag of tricks don't get destroyed by wands of cancellation
	  - Fixed false warning in dungeon overview when encountering
	    lighting shops
	  - Blasts or potions of acid destroy iron bars
	  - Metallivores can eat through iron bars

	* vanilla bug fixes:
	  - Prevent the Book of the Dead from being destroyed when the
	    player falls into lava. (from GruntHack)
	  - Fix security bug in options handler (reported by Matthew Daley,
	    fixed by Pasi Kallinen)
	  - Honor pickup_burden when picking up gold.
	  - Fix TTY crashing when a location has more than 32k items (from NAO)
	  - Correct article when choking on named artifacts
	  - C343-8: Plural of Nazgul is Nazgul, not Nazguls
	  - C343-52: Worn or wielded objects destroyed by dipping into lit
	             potions of oil are not handled properly; this can result
	             in odd game behavior.