@@ -329,7 +329,7 @@ E NEARDATA struct you u;
 #define PM_BABY_BLACK_DRAGON  PM_BABY_SIRRUSH
 #define PM_BABY_BLUE_DRAGON   PM_BABY_LEVIATHAN
 #define PM_BABY_GREEN_DRAGON  PM_BABY_WYVERN
-/*#define PM_BABY_GOLD_DRAGON   PM_BABY_GOLD_DRAGON*/
+/*#define PM_BABY_GLOWING_DRAGON   PM_BABY_GLOWING_DRAGON*/
 #define PM_BABY_YELLOW_DRAGON PM_BABY_GUIVRE
 #define PM_GRAY_DRAGON        PM_TATZELWORM
 #define PM_SILVER_DRAGON      PM_AMPHITERE
@@ -339,7 +339,7 @@ E NEARDATA struct you u;
 #define PM_BLACK_DRAGON       PM_SIRRUSH
 #define PM_BLUE_DRAGON        PM_LEVIATHAN
 #define PM_GREEN_DRAGON       PM_WYVERN
-/*#define PM_GOLD_DRAGON        PM_GOLD_DRAGON*/
+/*#define PM_GLOWING_DRAGON   PM_GLOWING_DRAGON*/
 #define PM_YELLOW_DRAGON      PM_GUIVRE
 
 #define GRAY_DRAGON_SCALE_MAIL       MAGIC_DRAGON_SCALE_MAIL
@@ -350,7 +350,7 @@ E NEARDATA struct you u;
 #define BLACK_DRAGON_SCALE_MAIL      DISINTEGRATION_DRAGON_SCALE_MA
 #define BLUE_DRAGON_SCALE_MAIL       ELECTRIC_DRAGON_SCALE_MAIL
 #define GREEN_DRAGON_SCALE_MAIL      POISON_DRAGON_SCALE_MAIL
-#define GOLD_DRAGON_SCALE_MAIL       STONE_DRAGON_SCALE_MAIL
+#define GLOWING_DRAGON_SCALE_MAIL    STONE_DRAGON_SCALE_MAIL
 #define YELLOW_DRAGON_SCALE_MAIL     ACID_DRAGON_SCALE_MAIL
 
 #define GRAY_DRAGON_SCALES       MAGIC_DRAGON_SCALES
@@ -361,7 +361,7 @@ E NEARDATA struct you u;
 #define BLACK_DRAGON_SCALES      DISINTEGRATION_DRAGON_SCALES
 #define BLUE_DRAGON_SCALES       ELECTRIC_DRAGON_SCALES
 #define GREEN_DRAGON_SCALES      POISON_DRAGON_SCALES
-#define GOLD_DRAGON_SCALES       STONE_DRAGON_SCALES
+#define GLOWING_DRAGON_SCALES    STONE_DRAGON_SCALES
 #define YELLOW_DRAGON_SCALES     ACID_DRAGON_SCALES
 
 
