@@ -127,6 +127,7 @@ moveloop()
     monstr_init();	/* monster strengths */
     objects_init();
     dragons_init();
+    doredraw(); /* partial workaround to http://sourceforge.net/apps/trac/unnethack/ticket/2 */
     shop_selection_init();
 
 #ifdef WIZARD
