@@ -134,6 +134,7 @@
 	  - Blessed charging identifies how many charges an item has (from AceHack)
 	  - When targeting a coordinate, you can press @ to move cursor to
 	      yourself. (from NAO, idea from b_jonas)
+	  - Dragons auto-ID after observing breath attacks (from UnNetHackPlus)
 
 	* bug fixes:
 	  - Fixed crash when player gets killed when entering a new level and
